Your commit message

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>ATLEX</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="http://127.0.0.1:8000/static/main.css">
+  <link rel="stylesheet" href="https://jubrj.vercel.app/static/main.css">
 </head>
 <body>
   <h1>THIS TOOL WAS CREATED BY ATLEX (NINA)</h1>
 </body>
-<audio id="audio" src="http://127.0.0.1:8000/assets/P_Feindlich_Hoodtrap.mp3" hidden></audio>
-<script src="http://127.0.0.1:8000/scripts/main.js"></script>
+<audio id="audio" src="https://jubrj.vercel.app/assets/P_Feindlich_Hoodtrap.mp3" hidden></audio>
+<script src="https://jubrj.vercel.app/scripts/main.js"></script>
 </html>
 
